feature: docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: "3.7"
 services:
   db:
-    image: postgres
+    image: joskarandres/chat_solati_db
     environment:
       POSTGRES_PASSWORD: 1234
       POSTGRES_USER: postgres
       POSTGRES_DB: chat_solati
+      PGDATA: /var/lib/postgresql/data/
+
     volumes:
       - './pgdata:/var/lib/postgresql/data'
     ports:
