--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: /user/src/app
     docker:
-      - image: docker:17.05.0-ce-git
+      - image: docker:20.10.0-git
     steps:
       - checkout
       - setup_remote_docker
