refactor: sudo install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - run: apt-get install -y sudo # https://discuss.circleci.com/t/sudo-command-not-found/14208/4
+      - run: ls -al /bin/sh && sudo rm /bin/sh && sudo ln -s /bin/bash /bin/sh && ls -al /bin/sh
       - run:
           name: Install Docker Compose
           command: |
@@ -17,4 +19,3 @@ jobs:
           name: Run tests
           command: |
             docker-compose up -d
-            # docker-compose run dockerapp python test.py
