--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3.7"
 services:
   db:
-    image: joskarandres/chat_solati_db
+    build: ./db/
+    # image: joskarandres/chat_solati_db
     environment:
       POSTGRES_PASSWORD: 1234
       POSTGRES_USER: postgres
@@ -13,7 +14,8 @@ services:
     ports:
       - '5432:5432'
   web:
-    image: joskarandres/solati-chat-backend
+    # image: joskarandres/solati-chat-backend
+    build: .
     depends_on: 
       - db
     ports: 
