--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,3 +20,14 @@ jobs:
           name: Run tests
           command: |
             docker-compose up -d
+    deployment:
+      hub:
+        branch: [master]
+        command: |
+          - docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
+          - docker tag solati-chat-back_web $DOCKER_HUB_USER_ID/solati-chat-back_web:$CIRCLE_SHA1
+          - docker tag solati-chat-back_db $DOCKER_HUB_USER_ID/solati-chat-back_db:$CIRCLE_SHA1
+          - docker tag solati-chat-back_web $DOCKER_HUB_USER_ID/solati-chat-back_web:latest
+          - docker tag solati-chat-back_db $DOCKER_HUB_USER_ID/solati-chat-back_db:latest
+          - docker push $DOCKER_HUB_USER_ID/solati-chat-back_db:latest
+          - docker push $DOCKER_HUB_USER_ID/solati-chat-back_web:latest
