--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,31 @@ jobs:
           command: |
             docker-compose up -d
     deployment:
-      hub:
-        branch: [main]
-        command: |
-          - docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
-          - docker tag solati-chat-back_web $DOCKER_HUB_USER_ID/solati-chat-back_web:$CIRCLE_SHA1
-          - docker tag solati-chat-back_db $DOCKER_HUB_USER_ID/solati-chat-back_db:$CIRCLE_SHA1
-          - docker tag solati-chat-back_web $DOCKER_HUB_USER_ID/solati-chat-back_web:latest
-          - docker tag solati-chat-back_db $DOCKER_HUB_USER_ID/solati-chat-back_db:latest
-          - docker push $DOCKER_HUB_USER_ID/solati-chat-back_db:latest
-          - docker push $DOCKER_HUB_USER_ID/solati-chat-back_web:latest
+      docker:
+        - image: circleci/cci-demo-docker-primary:0.0.2
+      steps:
+        - setup_remote_docker
+        - run:
+          name: Publicar imagenes docker
+          command: |
+            docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
+            docker tag solati-chat-back_web $DOCKER_HUB_USER_ID/solati-chat-back_web:$CIRCLE_SHA1
+            docker tag solati-chat-back_db $DOCKER_HUB_USER_ID/solati-chat-back_db:$CIRCLE_SHA1
+            docker tag solati-chat-back_web $DOCKER_HUB_USER_ID/solati-chat-back_web:latest
+            docker tag solati-chat-back_db $DOCKER_HUB_USER_ID/solati-chat-back_db:latest
+            docker push $DOCKER_HUB_USER_ID/solati-chat-back_db:latest
+            docker push $DOCKER_HUB_USER_ID/solati-chat-back_web:latest
+workflows:
+  version: 2
+  build-main:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: main
+      - deployment:
+          requires:
+            - build
+          filters:
+            branches:
+              only: main
