fix: permisos a circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
     working_directory: /user/src/app
     executor: docker-publisher
     steps:
+      - run:
+        name: 'Grants permissions to circle ci user'
+        command: 'chown -R $USER:$USER /user/src/app'
       - checkout
       - setup_remote_docker
       - run: apt-get update
