--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,9 @@ jobs:
           command: |
             docker ps -a
             docker login -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
-            docker tag solati-chat-back_web $DOCKER_HUB_USER_ID/solati-chat-back_web:$CIRCLE_SHA1
-            docker tag solati-chat-back_db $DOCKER_HUB_USER_ID/solati-chat-back_db:$CIRCLE_SHA1
-            docker tag solati-chat-back_web $DOCKER_HUB_USER_ID/solati-chat-back_web:latest
-            docker tag solati-chat-back_db $DOCKER_HUB_USER_ID/solati-chat-back_db:latest
-            docker push $DOCKER_HUB_USER_ID/solati-chat-back_db:latest
-            docker push $DOCKER_HUB_USER_ID/solati-chat-back_web:latest
+            docker tag project_web $DOCKER_HUB_USER_ID/project_web:$CIRCLE_SHA1
+            docker tag project_db $DOCKER_HUB_USER_ID/project_db:$CIRCLE_SHA1
+            docker tag project_web $DOCKER_HUB_USER_ID/project_web:latest
+            docker tag project_db $DOCKER_HUB_USER_ID/project_db:latest
+            docker push $DOCKER_HUB_USER_ID/project_db:latest
+            docker push $DOCKER_HUB_USER_ID/project_web:latest
